--- a/src/web/admins/templates/admins/category_list.html
+++ b/src/web/admins/templates/admins/category_list.html
@@ -74,7 +74,7 @@
                                                     {{ object.name }}
                                                 </a>
                                             </td>
-                                            <td>{{ object.created_at|date:"Y-m-d" }}</td>
+                                            <td>{{ object.created_at }}</td>
                                             <th>
                                                 <a href="{% url 'admins:category-update' object.pk %}">
                                                     <i class="fa fa-edit"></i>
