--- a/src/web/admins/templates/admins/contentrating_list.html
+++ b/src/web/admins/templates/admins/contentrating_list.html
@@ -62,7 +62,6 @@
                                 <th>Rating Code</th>
                                 <th>Description</th>
                                 <th>Created At</th>
-                                <th>Updated At</th>
                                 <th>-</th>
                             </tr>
                             </thead>
@@ -76,12 +75,11 @@
                                         </a>
                                     </td>
                                     <td>{{ object.description }}</td>
-                                    <td>{{ object.created_at|date:"Y-m-d" }}</td>
-                                    <td>{{ object.updated_at|date:"Y-m-d" }}</td>
+                                    <td>{{ object.created_at }}</td>
                                     <th>
                                         <a href="{% url 'admins:content-rating-update' object.pk %}">
                                             <i class="fa fa-edit"></i>
-                                        </a> &nbsp;
+                                        </a>
                                         <a href="{% url 'admins:content-rating-delete' object.pk %}"
                                            class="text-danger">
                                             <i class="fa fa-trash"></i>
