--- a/src/web/admins/templates/admins/contentrating_form.html
+++ b/src/web/admins/templates/admins/contentrating_form.html
@@ -3,29 +3,37 @@
 {% load crispy_forms_tags %}
 {% load humanize %}
 
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} Content Rating {% endblock %}
 
 {% block content %}
-<div class="container">
-
     <div class="container">
-        {% if object %}
-        <h1>Update Rating</h1>
-        {% else %}
-        <h1>Add New Rating</h1>
-        {% endif %}
+        <div class="row">
+            <div class="col-12">
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="mb-0 font-size-24">
+                                CONTENT RATING {% if object %}#{{ object }}{% else %}FORM{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-sm-6 text-right">
 
+                            <button type="button" class="btn btn-primary mb-1"
+                                    onclick="window.location.href='{% url 'admins:content-rating-list' %}'">
+                                <i class="fa fa-arrow-left"></i> Back to Content Ratings
+                            </button>
 
-        <div class="mt-2">
-            <a href="{% url 'admins:content-rating-list' %}" class="mt-2 btn btn-sm btn-secondary"><i class="fa fa-arrow-left"
-                                                                                                aria-hidden="true"></i>
-                Back to List</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
         <div class="row justify-content-center mt-4">
-            <div class="col-12 col-sm-12">
+            <div class="col-sm-8">
                 <div class="card shadow-lg">
                     <div class="card-body">
-                        <form method="post" novalidate>
+                        <form method="post" novalidate enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form.non_field_errors }}
                             {{ form|crispy }}
@@ -39,4 +47,4 @@
             </div>
         </div>
     </div>
-    {% endblock %}
+{% endblock %}
