--- a/src/web/admins/templates/admins/director_form.html
+++ b/src/web/admins/templates/admins/director_form.html
@@ -2,27 +2,46 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load humanize %}
+{% load core_tags %}
 
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} Director Form {% endblock %}
 
 {% block content %}
-<div class="container">
-    {% if object %}
-    <h1>Update Director</h1>
-    {% else %}
-    <h1>Add New Director</h1>
-    {% endif %}
+    <div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="page-title-box">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="mb-0 font-size-24">
+                            DIRECTOR {% if object %}#{{ object }}{% else %}FORM{% endif %}
+                        </p>
+                    </div>
+                    <div class="col-sm-6 text-right">
 
-    <<div class="mt-2">
-        <a href="{% url 'admins:director-list' %}" class="mt-2 btn btn-sm btn-secondary"><i class="fa fa-arrow-left"
-                                                                                         aria-hidden="true"></i>
-            Back to List</a>
+                        <button type="button" class="btn btn-primary mb-1"
+                                onclick="window.location.href='{% url 'admins:director-list' %}'">
+                            <i class="fa fa-arrow-left"></i> Back to Directors
+                        </button>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
+
     <div class="row justify-content-center mt-4">
-        <div class="col-12 col-sm-12">
+        <div class="col-sm-8">
             <div class="card shadow-lg">
+                {% if object %}
+                        <div class="card-body border-bottom text-center">
+                            <img alt="poster-image" class="img-circle img-thumbnail"
+                                 height="150" width="150" src="{{ object.profile_image|image_or_placeholder:"150" }}">
+                        </div>
+                    {% endif %}
                 <div class="card-body">
-                    <form method="post" novalidate>
+                    <form method="post" novalidate enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.non_field_errors }}
                         {{ form|crispy }}
@@ -34,5 +53,5 @@
                 </div>
             </div>
         </div>
-</div>
+    </div>
 {% endblock %}
