--- a/src/web/admins/templates/admins/dramaseries_form.html
+++ b/src/web/admins/templates/admins/dramaseries_form.html
@@ -2,40 +2,68 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% load humanize %}
+{% load core_tags %}
 
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} DRAMA SERIAL {% endblock %}
 
 {% block content %}
-<div class="container">
+    <div class="container">
 
-            {% if object %}
-            <h1>Update Drama Series</h1>
-            {% else %}
-            <h1>Create Series</h1>
-            {% endif %}
-            <div class="mt-2">
-                <a href="{% url 'admins:drama-list' %}" class="mt-2 btn btn-sm btn-secondary"><i
-                        class="fa fa-arrow-left"
-                        aria-hidden="true"></i>
-                    Back to List</a>
-            </div>
-            <div class="row justify-content-center mt-4">
-                <div class="col-12 col-sm-12">
-                    <div class="card shadow-lg">
-                        <div class="card-body">
-                            <form method="post" novalidate>
-                                {% csrf_token %}
-                                {{ form.non_field_errors }}
-                                {{ form|crispy }}
+        <div class="row">
+            <div class="col-12">
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="mb-0 font-size-24">
+                                DRAMA SERIAL {% if object %}#{{ object }}{% else %}FORM{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-sm-6 text-right">
 
-                                <button type="submit" class="btn btn-primary">Confirm</button>
-                                <br>
-                            </form>
+                            <button type="button" class="btn btn-primary mb-1"
+                                    onclick="window.location.href='{% url 'admins:drama-list' %}'">
+                                <i class="fa fa-arrow-left"></i> Back to Drama Serials
+                            </button>
 
                         </div>
                     </div>
+
                 </div>
-            </div>s
+            </div>
         </div>
+
+        <div class="row justify-content-center mt-4">
+            <div class="col-sm-8">
+                <div class="card shadow-lg">
+                    {% if object %}
+                        <div class="card-body border-bottom text-center">
+                            <img alt="poster-image" class="img-circle img-thumbnail"
+                                 height="150" width="150" src="{{ object.poster_image|image_or_placeholder:"150" }}">
+                        </div>
+                    {% endif %}
+                    <div class="card-body">
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            {{ form|crispy }}
+
+                            <button type="submit" class="btn btn-primary">Confirm</button>
+                            <br>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
-    {% endblock %}
+{% endblock %}
+
+{% block js_code %}
+    <script>
+        $(document).ready(function () {
+            $('#id_director').addClass('form-control');
+
+        });
+    </script>
+{% endblock %}
