--- a/src/web/admins/templates/admins/tag_form.html
+++ b/src/web/admins/templates/admins/tag_form.html
@@ -8,20 +8,35 @@
 
 {% block content %}
     <div class="container">
-        {% if object %}
-            <h1>Update Tag</h1>
-        {% else %}
-            <h1>Create Tag</h1>
-        {% endif %}
-        <div class="mt-2">
-            <a href="{% url 'admins:tag-list' %}" class="mt-2 btn btn-sm btn-secondary"><i class="fa fa-arrow-left" aria-hidden="true"></i>
-                Back to Tag List</a>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="mb-0 font-size-24">
+                                TAG {% if object %}#{{ object }}{% else %}FORM{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-sm-6 text-right">
+
+                            <button type="button" class="btn btn-primary mb-1"
+                                    onclick="window.location.href='{% url 'admins:tag-list' %}'">
+                                <i class="fa fa-arrow-left"></i> Back to Tags
+                            </button>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
+
         <div class="row justify-content-center mt-4">
-            <div class="col-12 col-sm-12">
+            <div class="col-sm-8">
                 <div class="card shadow-lg">
                     <div class="card-body">
-                        <form method="post" novalidate>
+                        <form method="post" novalidate enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form.non_field_errors }}
                             {{ form|crispy }}
