--- a/src/web/admins/templates/admins/link_cast_dramaseries.html
+++ b/src/web/admins/templates/admins/link_cast_dramaseries.html
@@ -8,9 +8,9 @@
 
 {% block content %}
     <div class="container">
-                <div class="row">
+        <div class="row">
             <div class="col">
-                <h1> Series Tags: {{ drama_series.title }}</h1>
+                <h1> Cast Members: {{ drama_series.title }}</h1>
             </div>
             <div class="col text-right">
                 <a href="{% url 'admins:drama-detail' drama_series.pk %}"
@@ -20,7 +20,6 @@
                     Back to List</a>
             </div>
         </div>
-
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-sm-12">
                 <div class="card shadow-lg">
