--- a/src/web/admins/templates/admins/link_languages_dramaseries.html
+++ b/src/web/admins/templates/admins/link_languages_dramaseries.html
@@ -8,15 +8,19 @@
 
 {% block content %}
     <div class="container">
-        <h1>Link Languages to {{ drama_series.title }}</h1>
-
-
-        <div class="mt-2">
-            <a href="{% url 'admins:drama-detail' drama_series.slug %}" class="mt-2 btn btn-sm btn-secondary"><i
-                    class="fa fa-arrow-left"
-                    aria-hidden="true"></i>
-                Back to List</a>
+                <div class="row">
+            <div class="col">
+                <h1> Series Languages: {{ drama_series.title }}</h1>
+            </div>
+            <div class="col text-right">
+                <a href="{% url 'admins:drama-detail' drama_series.pk %}"
+                   class="mt-2 btn btn-sm btn-secondary"><i
+                        class="fa fa-arrow-left"
+                        aria-hidden="true"></i>
+                    Back to List</a>
+            </div>
         </div>
+
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-sm-12">
                 <div class="card shadow-lg">
