--- a/src/web/admins/templates/admins/season_form.html
+++ b/src/web/admins/templates/admins/season_form.html
@@ -6,7 +6,7 @@
     {% if season %}
     <h1>Update Season for {{ season.series.title }}</h1>
     <div class="mt-2">
-        <a href="{% url 'admins:drama-detail' slug=season.series.slug %}" class="mt-2 btn btn-sm btn-secondary"><i
+        <a href="{% url 'admins:drama-detail' pk=season.series.pk %}" class="mt-2 btn btn-sm btn-secondary"><i
                 class="fa fa-arrow-left"
                 aria-hidden="true"></i>
             Back to List</a>
@@ -14,7 +14,7 @@
     {% else %}
      <h1>Create Season {{ object }}</h1>
     <div class="mt-2">
-        <a href="{% url 'admins:drama-detail' slug=object.slug %}" class="mt-2 btn btn-sm btn-secondary"><i
+        <a href="{% url 'admins:drama-detail' pk=object.pk %}" class="mt-2 btn btn-sm btn-secondary"><i
                 class="fa fa-arrow-left"
                 aria-hidden="true"></i>
             Back to List</a>
