--- a/src/web/admins/templates/admins/tag_list.html
+++ b/src/web/admins/templates/admins/tag_list.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            TAG MANAGEMENT
+                            TAGS MANAGEMENT
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
@@ -58,8 +58,7 @@
                                         #
                                     </th>
                                     <th>Tag Name</th>
-                                    <th>Slug</th>
-                                    <th>Created At</th>
+                                    <th>Created On</th>
                                     <th>-</th>
                                 </tr>
                                 </thead>
@@ -70,10 +69,9 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>
                                             <a href="{% url 'admins:tag-update' object.pk %}">
-                                                {{ object.name }}
+                                                {{ object.name }} - {{ object.slug }}
                                             </a>
                                         </td>
-                                        <td>{{ object.slug }}</td>
                                         <td>{{ object.created_at }}</td>
                                         <th>
                                             <a href="{% url 'admins:tag-update' object.pk %}">
