--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -19,7 +19,7 @@
     <div class="account-pages my-5 pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-5 shadow-lg ">
+                <div class="col-md-8 col-lg-6 col-xl-5">
                     <div class="card overflow-hidden">
                         <div class="bg-soft-primary">
                             <div class="row">
@@ -36,7 +36,7 @@
                                 <a href="">
                                     <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-light">
-                                                <img src="{% static 'core/images/logos/logo-red.png' %}" alt=""
+                                                <img src="https://placehold.co/100" alt=""
                                                      class="rounded-circle"
                                                      height="45">
                                             </span>
@@ -115,10 +115,10 @@
                                     </ul>
                                 {% endif %}
 
-                                <div class="mt-4 text-center">
-                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i
-                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
-                                </div>
+{#                                <div class="mt-4 text-center">#}
+{#                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i#}
+{#                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>#}
+{#                                </div>#}
                             </div>
 
                         </div>
