--- a/src/web/admins/templates/admins/tag_list.html
+++ b/src/web/admins/templates/admins/tag_list.html
@@ -69,7 +69,7 @@
                                         <td>{{ forloop.counter }}</td>
                                         <td>
                                             <a href="{% url 'admins:tag-update' object.pk %}">
-                                                {{ object.name }} - {{ object.slug }}
+                                                {{ object.name }}
                                             </a>
                                         </td>
                                         <td>{{ object.created_at }}</td>
