--- a/src/web/admins/templates/admins/dramaseries_list.html
+++ b/src/web/admins/templates/admins/dramaseries_list.html
@@ -40,11 +40,6 @@
                             <input type="text" class="form-control " placeholder="Enter Drama Series Title"
                                    id="id_title"
                                    value="
-
-
-
-
-
                                            {% if drama_series_filter.title.value %}{{ drama_series_filter.title.value }}{% endif %}"
                                    name="title">&nbsp;
                             <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>&nbsp;
@@ -66,6 +61,7 @@
                                     <th scope="col" colspan="2">Serial</th>
                                     <th scope="col">Views</th>
                                     <th scope="col">Search</th>
+                                    <th scope="col">Seasons</th>
                                     <th scope="col">Rating</th>
                                     <th scope="col">Featured</th>
                                     <th scope="col">-</th>
@@ -76,7 +72,8 @@
                                 {% for object in object_list %}
                                     <tr>
                                         <td style="width: 100px;">
-                                            <img src="{{ object.poster_image.url }}" alt="" height="50" width="50"
+                                            <img src="{{ object.poster_image|image_or_placeholder:"50x50" }}" alt=""
+                                                 height="50" width="50"
                                                  class="h-auto d-block rounded">
                                         </td>
                                         <td>
@@ -95,6 +92,11 @@
                                         <td>
                                             <h5><i class="bx bx-search align-middle me-1 font-size-24"></i>
                                                 {{ object.search_count }}
+                                            </h5>
+                                        </td>
+                                        <td>
+                                            <h5><i class="bx bx-play align-middle me-1 font-size-24"></i>
+                                                {{ object.get_total_seasons }}
                                             </h5>
                                         </td>
                                         <td>
