--- a/src/web/admins/templates/admins/season_episode_list.html
+++ b/src/web/admins/templates/admins/season_episode_list.html
@@ -4,12 +4,15 @@
 {% load crispy_forms_tags %}
 {% load humanize %}
 {% load core_tags %}
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %}{{ season.series.title }} - Season {{ season.season_number }}{% endblock %}
 
 {% block content %}
+
     <div class="d-flex justify-content-between align-items-center mb-2">
-        <h3>Episodes of {{ season.series.title }} - Season {{ season.season_number }}</h3>
-        <a href="{% url 'admins:episode-create' season.pk %}" class="btn btn-warning">Add Episode +</a>
+        <h3>{{ season.series.title }} - Season {{ season.season_number }}</h3>
+        <a href="{% url 'admins:episode-create' season.pk %}" class="btn btn-primary">
+            <i class="fa fa-plus"></i> Add Episode
+        </a>
     </div>
 
     <div class="row">
@@ -21,12 +24,12 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Title</th>
-                            <th scope="col">Episode Number</th>
+                            <th scope="col">Ep No</th>
                             <th scope="col">Duration (HH:MM:SS)</th>
-                            <th scope="col">Release Date</th>
-                            <th scope="col">View Count</th>
-                            <th scope="col">Is Free</th>
-                            <th scope="col">Is Active</th>
+                            <th scope="col">Released</th>
+                            <th scope="col">Views</th>
+                            <th scope="col">Free</th>
+                            <th scope="col">Active</th>
                             <th scope="col">Action</th>
                         </tr>
                         </thead>
@@ -60,7 +63,7 @@
                             </tr>
                         {% empty %}
                             <tr>
-                                <td colspan="5" class="text-danger">No episodes found for this season.</td>
+                                <td colspan="5" class="text-danger"><b>No episodes found for this season.</b></td>
                             </tr>
                         {% endfor %}
                         </tbody>
@@ -75,7 +78,7 @@
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -83,13 +86,11 @@
                             </span>
                         </li>
                     {% endif %}
-                    &nbsp;&nbsp;&nbsp;
-                    <li class="page-link rounded">
+                    <li class="">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
