--- a/src/web/admins/templates/admins/season_form.html
+++ b/src/web/admins/templates/admins/season_form.html
@@ -2,45 +2,57 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-    {% if season %}
-    <h1>Update Season for {{ season.series.title }}</h1>
-    <div class="mt-2">
-        <a href="{% url 'admins:drama-detail' pk=season.series.pk %}" class="mt-2 btn btn-sm btn-secondary"><i
-                class="fa fa-arrow-left"
-                aria-hidden="true"></i>
-            Back to List</a>
-    </div>
-    {% else %}
-     <h1>Create Season {{ object }}</h1>
-    <div class="mt-2">
-        <a href="{% url 'admins:drama-detail' pk=object.pk %}" class="mt-2 btn btn-sm btn-secondary"><i
-                class="fa fa-arrow-left"
-                aria-hidden="true"></i>
-            Back to List</a>
-    </div>
-    {% endif %}
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="mb-0 font-size-24">
+                                Season: {% if object %}{{ object }}{% else %}Form{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-sm-6 text-right">
 
-    <div class="row justify-content-center mt-4">
-        <div class="col-12 col-sm-12">
-            <div class="card shadow-lg">
-                <div class="card-body">
-                    <form method="post" novalidate>
-                        {% csrf_token %}
-                        {{ form.non_field_errors }}
-                        {{ form|crispy }}
+                            {% if season %}
+                                <button type="button" class="btn btn-primary mb-1"
+                                        onclick="window.location.href='{% url 'admins:drama-detail' season.series.pk %}'">
+                                    <i class="fa fa-arrow-left"></i> Back to {{ season.series }}
+                                </button>
+                            {% else %}
+                                <button type="button" class="btn btn-primary mb-1"
+                                        onclick="window.location.href='{% url 'admins:drama-detail' object.pk %}'">
+                                    <i class="fa fa-arrow-left"></i> Back to {{ object }}
+                                </button>
+                            {% endif %}
 
-                        <button type="submit" class="btn btn-primary">Confirm</button>
-                        <br>
-                    </form>
+                        </div>
+                    </div>
 
                 </div>
             </div>
         </div>
+
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-sm-12">
+                <div class="card shadow-lg">
+                    <div class="card-body">
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            {{ form|crispy }}
+
+                            <button type="submit" class="btn btn-primary">Confirm</button>
+                            <br>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
-
-
-</div>
 {% endblock %}
 
 
