--- a/src/web/admins/templates/admins/user_list.html
+++ b/src/web/admins/templates/admins/user_list.html
@@ -58,7 +58,7 @@
                 <div class="card-body p-0">
                     {% if user_list %}
                         <div class="table-responsive">
-                            <table class="table table-borderless">
+                            <table class="table table-borderless table-hover">
                                 <thead class="border-bottom table-light">
                                 <tr>
                                     <th>ID</th>
