--- a/src/web/admins/templates/admins/dramaseries_list.html
+++ b/src/web/admins/templates/admins/dramaseries_list.html
@@ -12,7 +12,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            DRAMA SERIES
+                            DRAMA SERIALS
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
