--- a/src/web/admins/templates/admins/season_episode_list.html
+++ b/src/web/admins/templates/admins/season_episode_list.html
@@ -8,11 +8,28 @@
 
 {% block content %}
 
-    <div class="d-flex justify-content-between align-items-center mb-2">
-        <h3>{{ season.series.title }} - Season {{ season.season_number }}</h3>
-        <a href="{% url 'admins:episode-create' season.pk %}" class="btn btn-primary">
-            <i class="fa fa-plus"></i> Add Episode
-        </a>
+    <div class="row">
+        <div class="col-12">
+            <div class="page-title-box">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="mb-0 font-size-24">
+                            {{ season.series.title }} - Season {{ season.season_number }}
+                        </p>
+                    </div>
+                    <div class="col-sm-6 text-right">
+
+                        <a href="{% url 'admins:episode-create' season.pk %}" class="btn btn-primary">
+                            <i class="fa fa-plus"></i> Add Episode
+                        </a>&nbsp;
+                        <a class="btn btn-outline-primary" href="{% url 'admins:drama-detail' season.series.id %}">
+                            <i class="fa fa-arrow-left"></i> Go Back
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <div class="row">
@@ -24,6 +41,7 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Title</th>
+                            <th scope="col">Media</th>
                             <th scope="col">Ep No</th>
                             <th scope="col">Duration (HH:MM:SS)</th>
                             <th scope="col">Released</th>
@@ -39,6 +57,15 @@
                             <tr>
                                 <td><b>{{ forloop.counter }}</b></td>
                                 <td>{{ episode.title }}</td>
+                                <td>
+                                    <p class="h6 mb-0">
+                                        {% if episode.video_file %}
+                                            <a href="{{ episode.video_file }}">{{ episode.video_file_name|truncatechars:10 }}</a>
+                                        {% else %}
+
+                                        {% endif %}
+                                    </p>
+                                </td>
                                 <td>{{ episode.episode_number }}</td>
                                 <td>{{ episode.duration }}</td>
                                 <td>{{ episode.release_date }}</td>
@@ -53,12 +80,12 @@
                                 <td>
                                     {% if not episode.is_active %}
                                         <a href="{% url 'admins:episode-media-update' season.pk episode.pk %}"
-                                           ><i class="fa fa-upload"></i></a>
+                                        ><i class="fa fa-upload"></i></a>
                                     {% endif %}
                                     <a href="{% url 'admins:episode-update' season.pk episode.pk %}"
-                                       ><i class="fa fa-edit"></i></a>
+                                    ><i class="fa fa-edit"></i></a>
                                     <a href="{% url 'admins:episode-delete' season.pk episode.pk %}"
-                                       ><i class="fa fa-trash text-danger"></i></a>
+                                    ><i class="fa fa-trash text-danger"></i></a>
                                 </td>
                             </tr>
                         {% empty %}
